# CV-Lab-EL

./: CONTEXT.md  README.md  main.py  pipeline.py  pyproject.toml
backend/: README.md  main.py  pyproject.toml
backend/dataset/: metadata.json
backend/dataset/processed_tiles/: dataset_summary.csv
backend/dataset/processed_tiles/kolkata_2024/: tile_index.csv
backend/dataset/processed_tiles/mumbai_2024/: annotations_coco.json  ship_candidates.csv
backend/dataset/processed_tiles/mumbai_2024_sr/: annotations_coco.json  ship_candidates.csv  tile_index.csv
backend/services/: annotations.py  dataset_outputs.py  gee.py  masking.py  runner.py  super_resolution.py  tiling.py
backend/utils/: config.py  constants.py  errors.py  helpers.py  utils.py
dataset/: metadata.json
dataset/processed_tiles/: dataset_summary.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  ports.ts  react-leaflet-draw.d.ts  types.ts
frontend/src/components/: BboxMap.tsx
src/ship_pipeline/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  dataset_outputs.py  gee.py  masking.py  runner.py  super_resolution.py  tiling.py  utils.py  visualize.py
