[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "cd-lab-el"
version = "0.1.0"
description = "Automated dataset creation of ship images from satellite data using GEE and GIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.7.22",
    "fastapi>=0.136.0",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-contrib-python-headless>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "rasterio>=1.4.4",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "uvicorn>=0.44.0",
]

[project.scripts]
ship-pipeline = "ship_pipeline.cli:entrypoint"
ship-api = "ship_pipeline.api:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/ship_pipeline"]
